--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Revisão completa do sistema de freio</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text"> Esse Procedimento visa identificar o estado das peças do sistema de frenagem.
+                                   </p>
 
                             </div>
                         </div>
@@ -134,8 +134,8 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Revisão completa do sistema de suspenção</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text"> Uma boa revisão do sistema de suspensão  do aro é primordial para manter o veículo sempre em ordem
+                                    </p>
 
                             </div>
                         </div>
@@ -145,8 +145,8 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Manutenção e higienização do ar condicionado</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text"> A recomendação geral é que se faça a limpeza do ar-condicionado automotivo a cada seis meses.
+                                   </p>
 
                             </div>
                         </div>
@@ -156,8 +156,8 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">troca do quit de correia dentada</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text"> Para que ainda não sabe qual a funcionalidade ta correia dentada, sincronizar a vibragem.
+                                  </p>
 
                             </div>
                         </div>
@@ -167,8 +167,8 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Troca de óleos e filtros</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">pode parecer uma bobagem mas a troca de óleo é um dos procedimentos mais importantes para a vida útil do motor.
+                                   </p>
 
                             </div>
                         </div>
@@ -178,8 +178,7 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Troca de óleo do Câmbio automático</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">A troca de óleo do câmbio automático ainda nao é uma rotina de manutenção para muitos condutores.</p>
 
                             </div>
                         </div>
@@ -189,8 +188,7 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Reparo em câmbio automatizado</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text">A recuperação de câmbio automático visa a preservação do carro, viabilizando longevidade ao veículo.</p>
 
                             </div>
                         </div>
@@ -200,8 +198,7 @@
                             <img src="..." class="card-img-top" alt="...">
                             <div class="card-body">
                                 <h5 class="card-title">Revisão preventiva</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
+                                <p class="card-text"> A revisão preventiva corrige as </p>
 
                             </div>
                         </div>
